--- a/app/views/static_pages/components/_footer.erb
+++ b/app/views/static_pages/components/_footer.erb
@@ -1,19 +1,29 @@
-<footer class="footer"> 
-<div class="footer--container  container---full"> 
-      <nav class="footer--nav"> 
-        <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">  
-          Terms &amp; Privacy </a> <a class="footer--nav--link" href="case_study" target="_blank">Learn More</a>
-          <a class="footer--nav--link" target="_blank" href="/rayna">Watch Video</a>
-          <a class="footer--nav--link" href="mailto:hello@joinstorytime.com" >Email Us</a>
-          <a data-toggle="modal" data-target="#myDemo" class="footer--nav--link" >Request Demo</a>
-          <a class="footer--nav--link" href="/team">Our Team</a>
-          <a class="footer--nav--link" href="mailto:careers@joinstorytime.com">Careers</a>
-          <a class="footer--nav--link" href="/privacy">Trust &amp; Safety</a>
-          <a class="footer--nav--link" href="https://storytime.zendesk.com/hc/en-us" target="_blank">Support</a>
-      </nav> 
+<footer class="footer">
+<div class="footer--container  container---full">
+      <nav class="footer--nav">
+        <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
+          Terms &amp; Privacy </a>
+        <a class="footer--nav--link" href="case_study" target="_blank">
+          Learn More
+        </a>
+        <a class="footer--nav--link" href="mailto:team@readupnow.com">
+          Email Us
+        </a>
+        <a class="footer--nav--link" href="/team">
+          Our Team
+        </a>
+        <a class="footer--nav--link" href="mailto:team@readupnow.com">
+          Request Demo
+        </a>
+        <a class="footer--nav--link" href="mailto:careers@readupnow.com">
+          Careers
+        </a>
+        <a class="footer--nav--link" href="/privacy">
+          Trust &amp; Safety
+        </a>
+        <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
+          Support
+        </a>
+      </nav>
      </div>
-     <script> 
-         // Initialize smooth scroll lib 
-        var scroll = new SmoothScroll('a[href*="#"]');
-    </script>
 </footer>
