various logic fixes for the demo!

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,7 +2,11 @@
 html{ font-size:100%; }
 
 body {
+	font-family: 'Karla';
+	background-color: rgba(255,255,254,1)
   font-size: 1em;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -90,8 +94,8 @@ label.error {
 
 
 .nav > li {
-	position: relative; 
-    display: block; 
+	position: relative;
+    display: block;
 }
 
 
@@ -232,7 +236,7 @@ a .bottom button#join {
 
 
 @media screen and (min-width: 583px)	{
-	
+
 
 
 	#splash {
@@ -333,7 +337,7 @@ a .bottom button#join {
 	h1.banner#call-to-action{
 		font-size: 28px;
 	}
-	
+
 	#logo-new {
 		margin-right: 0;
 		margin-left: 0;
@@ -396,7 +400,7 @@ a .bottom button#join {
 
 
 
-	
+
 
 /* header ******************************************************** */
 
@@ -405,7 +409,7 @@ a .bottom button#join {
 	margin: 2.3em 0px;
 }
 
-.catch_phrase h2 { 
+.catch_phrase h2 {
     font-family: 'Karla', sans-serif;
     font-weight: bold;
     margin-top: -1.5em;
@@ -428,7 +432,7 @@ a .bottom button#join {
 	display: table;
 	height: 100%;
 	width: 100%;
-	text-align: center; 
+	text-align: center;
 }
 
 .wrapper .footer .bottom {
@@ -507,7 +511,7 @@ a .bottom button#join {
 
 /* video  ********************************************************************** */
 
-section.video iframe { 
+section.video iframe {
 	display: block;
 	margin: 0 auto;
 	margin-top: 100px;
@@ -530,9 +534,9 @@ h2 {
 }
 
 .divider {
-	width: 100%; 
+	width: 100%;
 	padding-top: 2em;
-	
+
 }
 
 #divider-mobile {
@@ -540,7 +544,7 @@ h2 {
 }
 
 .divider div {
-	display: block; 
+	display: block;
 	width: 15%;
 	margin: 0 auto;
 	border-bottom: 1px solid #AAAAAA;
@@ -549,16 +553,16 @@ h2 {
 span a {
 	text-decoration: none;
 	color: #ed7844;
-	
+
 }
 
 .divider-mini {
-	width: 100%; 
-	
+	width: 100%;
+
 }
 
 .divider-mini div {
-	display: block; 
+	display: block;
 	width: 10%;
 	margin: 0 auto;
 	border-bottom: 1px solid #AAAAAA;
@@ -580,7 +584,7 @@ span a {
 
 
 .the-problem .text h2, .the-product .text h2, .join-us .text h2 {
-	font-family: 'Karla'; 
+	font-family: 'Karla';
 	color: #ed7844;
 	font-size: 24px;
 }
@@ -606,11 +610,11 @@ span a {
 
 div.section-header {
 	width: 100%;
-	visibility: hidden; 
+	visibility: hidden;
 	text-align: center;
 	font-size: 1.8em;
 	color: #ed7844;
-}	
+}
 
 
 section {
@@ -645,7 +649,7 @@ a#more_team:hover p{
 	margin: 0 auto;
 	text-align: center;
 	font-family: sans-serif;
-	min-height: 15em; 
+	min-height: 15em;
 	padding-top: 3.5em;
 	font-size: 1.3em;
 
@@ -656,10 +660,6 @@ a#more_team:hover p{
 
 /*****************************************************************************************/
 
-body {
-	font-family: 'Karla'; 
-	background-color: rgba(255,255,254,1)
-}
 
 p {
     font-family: 'Karla', sans-serif;
@@ -694,7 +694,7 @@ fieldset input {
 
 
 button.get_update{
-	background-color: #ed7844; 
+	background-color: #ed7844;
 	font-family: 'Karla', sans-serif;
 }
 
@@ -723,13 +723,13 @@ span.italic {
 }
 
 h4 span a{
-	font-family: 'Karla'; 
+	font-family: 'Karla';
 	color: #ed7844;
 
 }
 
-.partners img { 
-	
+.partners img {
+
 	padding-top: 1.5em;
 	min-width: 150px;
 	max-width: 330px;
@@ -745,8 +745,8 @@ h4 span a{
     padding-left: 10%;
 }
 
-.globe  img { 
-	
+.globe  img {
+
 	min-width: 13em;
 	max-width: 15em;
 	display: inline-block;
@@ -758,7 +758,7 @@ h4 span a{
 }
 
 .v-align .text {
-	display:table-cell; 
+	display:table-cell;
 	vertical-align:middle;
 }
 
@@ -775,9 +775,9 @@ h4 span a{
 	}
 	.partners img {
 		width: 80%;
-	}	
-	
-	.dash img { 
+	}
+
+	.dash img {
 		width: 88%;
  	}
 
@@ -797,7 +797,7 @@ h4 span a{
 
 
 	.divider div {
-		display: block; 
+		display: block;
 		width: 25%;
 		margin: 0 auto;
 		border-bottom: 1px solid #AAAAAA;
@@ -837,9 +837,9 @@ h4 span a{
 	}
 
 	.partner-loops {
-		display: none; 	
+		display: none;
 	}
-	
+
 
 	.banner {
 		font-size: 2em; /*added for Karla*/
@@ -853,7 +853,7 @@ h4 span a{
 	}
 
 	.txt_inner {
-		/* TEMPORARY SOLUTION. Next step: vertically align */ 
+		/* TEMPORARY SOLUTION. Next step: vertically align */
 		padding-top: 3em;
 	}
 
@@ -876,7 +876,7 @@ h4 span a{
 		width: 90%;
 		display: block;
 		margin: 0 auto;
-		
+
 		padding-right: 0em;
 		line-height: 1.5em;
 	}
@@ -901,7 +901,7 @@ h4 span a{
 		width: 90%;
 		display: block;
 		margin: 0 auto;
-		
+
 		padding-right: 0em;
 		line-height: 1.5em;
 	}
@@ -948,8 +948,8 @@ h4 span a{
 	}
 
 
-	.partners img, .prize img { 
-	
+	.partners img, .prize img {
+
 		padding-top: 0px;
 		min-width: 10em;
 		max-width: 18em;
@@ -1032,7 +1032,7 @@ h4 span a{
 	    margin-right: 0px;
 	}
 
-	
+
 
 	#splash .hero-splash-text-container {
 		margin-left: auto;
@@ -1041,7 +1041,7 @@ h4 span a{
 }
 
 @media screen and (min-width: 768px)	{
-	
+
 
 }
 
@@ -1052,14 +1052,14 @@ h4 span a{
    		margin-right: 0px;
 
 	}
-		
+
 		/*change it from off-center*/
 	#splash .globe-text {
 		padding-left: 5%;
 	    width: 45%;
 	}
-	
-	
+
+
 }
 
 
