--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3,6 +3,8 @@ html{ font-size:100%; }
 
 body {
   font-size: 1em;
+  width: 100%;
+  height: 100%;
 }
 
 ul b {
@@ -697,7 +699,7 @@ fieldset input {
 
 
 button.get_update{
-	background-color: #61c242; 
+	background-color: #61c242;
 	font-family: 'Conv_Proxima-Nova-Semibold', sans-serif;
 	margin-top: 10px;
 }
