--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -23,19 +23,24 @@
   <script type="text/javascript" src="/js/homepage.js"></script>
 
   <script type="text/javascript">
-    $(document).ready(function(){
 
+    var scroll = new SmoothScroll('a[href*="#"]');
+
+    var scrollTarget =  isMobileDevice() ? 50 : 160;
+
+    function highlightNav () {
+      var scroll = $(window).scrollTop();
+      if (scroll < scrollTarget) {
+        $('.navbar').removeClass('highlighted');
+      } else {
+        $('.navbar').addClass('highlighted');
+      }
+    }
+
+    $(document).ready(function(){
+      highlightNav();
       $(window).scroll(function (event) {
-        var scrollTarget = 125
-        if (isMobileDevice()) {
-          scrollTarget = 200
-        }
-        var scroll = $(window).scrollTop();
-        if (scroll < scrollTarget) {
-          $('.navbar').removeClass('highlighted');
-        } else {
-          $('.navbar').addClass('highlighted');
-        }
+        highlightNav();
       });
       $('.modal input').on('click', function () {
         $(this).focus();
@@ -47,6 +52,33 @@
       // }
     });
   </script>
+
+  <script>
+    mixpanel.track_links("a#case-study-link", "Case study link clicked");
+    mixpanel.track('Homepage visited');
+
+    function DemoButtonClicked() {
+      mixpanel.track("Demo Button Clicked");
+    }
+  </script>
+
+  <!-- begin olark code -->
+  <script type="text/javascript" async>
+  ;(function(o,l,a,r,k,y){if(o.olark)return;
+  r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0];
+  y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r);
+  y=o.olark=function(){k.s.push(arguments);k.t.push(+new Date)};
+  y.extend=function(i,j){y("extend",i,j)};
+  y.identify=function(i){y("identify",k.i=i)};
+  y.configure=function(i,j){y("configure",i,j);k.c[i]=j};
+  k=y._={s:[],t:[+new Date],c:{},l:a};
+  })(window,document,"static.olark.com/jsclient/loader.js");
+  /* Add configuration calls below this comment */
+  olark.identify('9084-375-10-8744');
+  </script>
+  <!-- end olark code -->
+
+
 
 </head>
 
@@ -74,172 +106,134 @@
   </div>
   <% end %>
 
-  <% if flash[:wrong_grade_level_error] %>
-  <div id="alert">
-    <a class="alert" href="#alert">Right now, ReadUp is only available for preschool. We'll email you when it's ready for your grade level!</a>
-  </div>
-  <% end %>
 
-  <!-- modals -->
-  <div>
-    <%= render 'static_pages/homepage/modals/rayna-video' %>
-    <%= render 'static_pages/homepage/modals/signup-name-password' %>
-    <%= render 'static_pages/homepage/modals/gotta-wait' %>
-    <%= render 'static_pages/homepage/modals/demo' %>
-    <%= render 'static_pages/homepage/modals/signup-email' %>
-    <%= render 'static_pages/homepage/modals/congrats-modal' %>
-  </div>
-  <!-- modals end -->
+  <style type="text/css">
+    .form-container {
+      position: absolute;
+      margin: 0 auto;
+    }
 
+    .section-buffer {
+      display: none;
+      width: 100%;
+      height: 130px;
+    }
 
+    #end-no-reading {
+      padding-top: 60px;
+    }
 
+    /* mobile */
+    @media (max-width: 35.5em) {
+      .section-buffer {
+        height: 235px;
+      }
 
-  <%= render 'static_pages/homepage/navbar_desktop' %>
-  <%= render 'static_pages/homepage/navbar_mobile' %>
-
-
-<div class="splash-new">
-  <div
-    class="splash-container"
-    style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/student-hero-resized.jpg')
-          center
-          top/cover
-          no-repeat
-          #3C8FCA;"
-  >
-    <div class="title";">
-      <h1 id="pitch">
-        ReadUp grades running records for you.
-      </h1>
-      <center>
-        <h4 id="sub-pitch">
-          ReadUp listens and grades reading so you can spend your time teaching.
-        </h4>
-      </center>
-
-      <%= render 'static_pages/homepage/signup_form' %>
-
-    </div>
-  </div>
-</div>
+      #end-no-reading {
+        padding-top: 0px;
+      }
+    }
+  </style>
 
 
 
-<section class="product-display" id="end-no-reading">
-  <h1 class="section-banner">The end of scoring running records.</h1>
-  <div class="pure-g">
+  <%= render 'static_pages/homepage/navbar' %>
 
-    <div class="pure-u-1 pure-push-md-1-2 pure-u-md-1-2">
-      <div class="product-img">
-        <img src="/images/ipad-1.png" alt="">
+
+  <div class="splash-new">
+    <div
+      class="splash-container"
+      style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/student-hero-resized.jpg')
+            center
+            top/cover
+            no-repeat
+            #3C8FCA;"
+    >
+      <div class="title">
+        <div id="pitch" class="form-container">
+          <h1>
+            ReadUp grades running records for you.
+          </h1>
+          <center>
+            <h4 id="sub-pitch">
+              ReadUp listens and grades reading so you can spend your time teaching.
+            </h4>
+          </center>
+          <%= render 'static_pages/homepage/signup_form' %>
+        </div>
       </div>
     </div>
-
-
-    <div class="pure-u-1 pure-pull-md-1-2 pure-u-md-1-2">
-      <div class="product-text">
-        <h2>Running records scored for you</h2>
-        <ul>
-          <p><b>Save hundreds of hours</b> to spend teaching, not testing. </p>
-          <p><b>See miscue analyses</b> to know the type of errors students make.</p>
-          <p><b>Hear recordings</b> played back at anytime. </p>
-        </ul>
-      </div>
-    </div>
-
-
-  </div>
-</section>
-
-
-<section class="product-display" id="support-families" style="background-color: #676487; color:#ffffff;">
-  <div class="pure-g" style="padding-top: 6em;">
-
-    <div class="pure-u-1 pure-u-md-1-2">
-      <div class="product-img">
-        <img src="/images/ipad-2.png" alt="">
-      </div>
-    </div>
-
-    <div class="pure-u-1 pure-u-md-1-2">
-      <div class="product-text">
-        <h2>Hassle-free data collection</h2>
-        <ul>
-          <p style="color:#ffffff;"><b>Track student progress</b> over the year and see reading growth. </p>
-          <p style="color:#ffffff;"><b>Share with parents</b> to celebrate student gains.</p>
-          <p style="color:#ffffff;"><b>See reading weaknesses</b> and get strategies to target those. </p>
-        </ul>
-      </div>
-    </div>
-
   </div>
 
 
-</section>
+
+  <div class='section-buffer'></div>
+
+  <section class="product-display" id="end-no-reading">
+    <h1 class="section-banner">The end of scoring running records.</h1>
+    <div class="pure-g">
+
+      <div class="pure-u-1 pure-push-md-1-2 pure-u-md-1-2">
+        <div class="product-img">
+          <img src="/images/ipad-1.png" alt="">
+        </div>
+      </div>
+
+
+      <div class="pure-u-1 pure-pull-md-1-2 pure-u-md-1-2">
+        <div class="product-text">
+          <h2>Running records scored for you</h2>
+          <ul>
+            <p><b>Save hundreds of hours</b> to spend teaching, not testing. </p>
+            <p><b>See miscue analyses</b> to know the type of errors students make.</p>
+            <p><b>Hear recordings</b> played back at anytime. </p>
+          </ul>
+        </div>
+      </div>
+
+
+    </div>
+  </section>
+
+
+  <section class="product-display" id="support-families" style="background-color: #676487; color:#ffffff;">
+    <div class="pure-g" style="padding-top: 6em;">
+
+      <div class="pure-u-1 pure-u-md-1-2">
+        <div class="product-img">
+          <img src="/images/ipad-2.png" alt="">
+        </div>
+      </div>
+
+      <div class="pure-u-1 pure-u-md-1-2">
+        <div class="product-text">
+          <h2>Hassle-free data collection</h2>
+          <ul>
+            <p style="color:#ffffff;"><b>Track student progress</b> over the year and see reading growth. </p>
+            <p style="color:#ffffff;"><b>Share with parents</b> to celebrate student gains.</p>
+            <p style="color:#ffffff;"><b>See reading weaknesses</b> and get strategies to target those. </p>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
 
-<h1 class="banner" id="call-to-action">Spend your time teaching, not testing.</h1>
+  <h1 class="banner" id="call-to-action">Spend your time teaching, not testing.</h1>
 
-<p><center><b>Learn more about using ReadUp across your school.</b></center></p>
-
-<div class="demo" data-toggle="modal" data-target="#myDemo">
-
-<!--   <button
-    type="button"
-    onclick="DemoButtonClicked();"
-    class="demo-request-button btn btn-primary btn-lg pure-button pure-button-primary get_update dialog-button" style="width: 11em;"
-    id="start-modal-button"
-  >
-  Request a Demo
-</button>
- -->
-   
-
- </div>
-
-
-<img class="contact-image call-to-action-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/phone.png">
-<a href="mailto:hello@joinstorytime.com?&subject=Storytime">
-  <img id="email-image" class="contact-image call-to-action-image call-to-action-email-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/email.png">
-</a>
-
-</div>
+  <p><center><b>Learn more about using ReadUp across your school.</b></center></p>
 
 
 
-<%= render 'static_pages/components/footer' %>
+  <img class="contact-image call-to-action-image" src="https://d2yudi7y1eei74.cloudfront.net/assets/phone.png">
+  <a href="mailto:team@readupnow.com?&subject=Storytime">
+    team@readupnow.com
+  </a>
 
-<script>
-  mixpanel.track_links("a#case-study-link", "Case study link clicked");
-  mixpanel.track('Homepage visited');
-  function CaseStudyClicked() {
-    mixpanel.track("Case Study Clicked");
-  }
-  function VideoButtonClicked() {
-    mixpanel.track("Video Modal Clicked");
-  }
-  function DemoButtonClicked() {
-    mixpanel.track("Demo Button Clicked");
-  }
 
-</script>
-
-<!-- begin olark code -->
-<script type="text/javascript" async>
-;(function(o,l,a,r,k,y){if(o.olark)return;
-r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0];
-y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r);
-y=o.olark=function(){k.s.push(arguments);k.t.push(+new Date)};
-y.extend=function(i,j){y("extend",i,j)};
-y.identify=function(i){y("identify",k.i=i)};
-y.configure=function(i,j){y("configure",i,j);k.c[i]=j};
-k=y._={s:[],t:[+new Date],c:{},l:a};
-})(window,document,"static.olark.com/jsclient/loader.js");
-/* Add configuration calls below this comment */
-olark.identify('9084-375-10-8744');</script>
-<!-- end olark code -->
+  <%= render 'static_pages/components/footer' %>
 
 </body>
 
