--- a/app/views/static_pages/components/_footer.erb
+++ b/app/views/static_pages/components/_footer.erb
@@ -3,7 +3,7 @@
       <nav class="footer--nav">
         <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
           Terms &amp; Privacy </a>
-        <a class="footer--nav--link" href="case_study" target="_blank">
+        <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
           Learn More
         </a>
         <a class="footer--nav--link" href="mailto:team@readupnow.com">
