Changed styling for 1) text formatting of book, 2) arrow text, 3) header of grading overlay

--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -38,9 +38,9 @@
 }
 
 .readerTextContainer {
-	margin-top: 10px;
-	flex: 1;
-	display: flex;
+	flex: .875;
+    line-height: 1.6;
+    display: flex;
 	flex-flow: column;
 	justify-content: space-around;
 }
