h1 language changes --> scores, not grades

--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -136,11 +136,11 @@
       <div class="title">
         <div id="pitch" class="form-container">
           <h1>
-            ReadUp grades running records for you.
+            ReadUp scores running records for you.
           </h1>
           <center>
             <h4 id="sub-pitch">
-              ReadUp listens and grades reading so you can spend your time teaching.
+              ReadUp listens and scores reading so you can spend your time teaching.
             </h4>
           </center>
           <%= render 'static_pages/homepage/signup_form' %>
