--- a/app/views/transcriber_interface/index.html.erb
+++ b/app/views/transcriber_interface/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("TranscriberInterface", props: @transcriber_interface_props, prerender: false, class: 'fullHeight', id: 'transcriberInterfaceContainer', style: "height: 100%;") %>
+<%= react_component("TranscriberInterface", props: @transcriber_interface_props, prerender: false,  id: 'transcriberInterfaceContainer') %>
