can change text based on keypress

--- a/client/src/TranscriberInterface/styles.css
+++ b/client/src/TranscriberInterface/styles.css
@@ -63,3 +63,11 @@
 .textWord:hover {
 	background-color: lightgray;
 }
+
+/*.highlightedTextWord {
+	display: inline-block;
+	background-color: lightgr;
+}*/
+
+
+
