--- a/app/views/homepage/partials/_navbar.html.erb
+++ b/app/views/homepage/partials/_navbar.html.erb
@@ -1,5 +1,11 @@
 <style type="text/css">
+  .navbar .container {
+    padding-top: 11px;
+  }
 
+  .navbar .container .how{
+    padding-top: 11px;
+  }
 
 </style>
 
@@ -11,7 +17,7 @@
       </div>
     </a>
     <ul class="navbar-right">
-      <li><a href="#end-no-reading">
+      <li class="how"><a href="#end-no-reading">
         How it works
       </a></li>
 <!--       <li class="navbar-button-item">
