--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -14,7 +14,7 @@
     <%= javascript_include_tag 'homepage/helpers', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'vendor/smooth-scroll', 'data-turbolinks-track': 'reload' %>
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <!-- Load jQuery and  validtions plugin -->
 
