updated background image on homepage

--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -127,7 +127,7 @@
   <div class="splash-new">
     <div
       class="splash-container"
-      style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/student-hero-resized.jpg')
+      style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/new-hero.jpg')
             center
             top/cover
             no-repeat
@@ -136,11 +136,11 @@
       <div class="title">
         <div id="pitch" class="form-container">
           <h1>
-            ReadUp scores running records for you.
+            ReadUp scores running records for you
           </h1>
           <center>
             <h4 id="sub-pitch">
-              ReadUp listens and scores reading so you can spend your time teaching.
+              ReadUp listens to students read and create a full running record of their reading
             </h4>
           </center>
           <%= render 'static_pages/homepage/signup_form' %>
@@ -154,7 +154,7 @@
   <div class='section-buffer'></div>
 
   <section class="product-display" id="end-no-reading">
-    <h1 class="section-banner">The end of scoring running records.</h1>
+    <h1 class="section-banner">Save hundreds of instructional hours</h1>
     <div class="pure-g">
 
       <div class="pure-u-1 pure-push-md-1-2 pure-u-md-1-2">
