fix smooth scroll and redo navbar

--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -9,17 +9,17 @@
    margin: 0 auto;
  }
 
- a#navbar-title {
-   color:white;
-   font-family:'CircularStd';
-   font-weight: bold;
-   font-size:2em;
-   // margin-top: 0.3em;
-   float: left;
-   div  {
+ // a#navbar-title {
+ //   color:white;
+ //   font-family:'CircularStd';
+ //   font-weight: bold;
+ //   font-size:2em;
+ //   // margin-top: 0.3em;
+ //   float: left;
+ //   div  {
 
-   }
- }
+ //   }
+ // }
 
  div#log-in-modal.modal-dialog {
    margin-top: 10%;
@@ -32,7 +32,7 @@
    padding-left: 0.7em;
  }
 
- // Added to get standard spacing on the expanded form 
+ // Added to get standard spacing on the expanded form
  .signup-name-password {
     margin-top: -13px;
  }
@@ -208,16 +208,16 @@
     min-height: 500px; // 720px
   }
 
-  div.title { 
+  div.title {
     width: 90%;
-    margin: 0 auto; 
+    margin: 0 auto;
 
       h1#pitch {
         font-size: 1.5em;
         margin-top: 0.9em;
       }
       h4#sub-pitch {
-        font-size: 17px; 
+        font-size: 17px;
         line-height: 1.5;
         font-family: 'Proximanova Semibold';
       }
@@ -232,13 +232,10 @@
 
   h1.section-banner {
     margin-top: -1em;
-    color: #4a4a4a; 
+    color: #4a4a4a;
   }
 
 
-  button#top-button { 
-    margin-top: 8px;
-  }
 
   // have a different resized background on mobile
   div.splash-container {
