--- a/app/views/homepage/partials/_navbar.html.erb
+++ b/app/views/homepage/partials/_navbar.html.erb
@@ -1,71 +1,104 @@
+<script type="text/javascript">
+  var scrollTarget =  isMobileDevice() ? 50 : 160;
+
+
+  function highlightNav () {
+    // note that the stylings for highlight stuff is SASS!!!
+    var scroll = $(window).scrollTop();
+    if (scroll < scrollTarget) {
+      $('.readup-nav').removeClass('highlighted');
+    } else {
+      $('.readup-nav').addClass('highlighted');
+    }
+  }
+
+  $(document).ready(function(){
+    highlightNav();
+    $(window).scroll(function (event) {
+      highlightNav();
+    });
+    $('.modal input').on('click', function () {
+      $(this).focus();
+    })
+  });
+</script>
+
 <style type="text/css">
-  .navbar .container {
-    padding-top: 11px;
+
+
+  .readup-nav {
+    position:fixed;
+    height: 60px;
+    width: 100%;
   }
 
-  .navbar .container .how{
-    padding-top: 11px;
+  .nav-buttons {
+    float: right;
+    height: 100%;
+    display: flex;
+    flex: 1;
+    align-items: center;
+
   }
 
+  .nav-buttons a {
+    padding-right: 12px;
+  }
+
+  .logo-container {
+    display: flex;
+    flex: 1;
+    height: 100%;
+    align-items: center;
+    float: left;
+  }
+
+  .how {
+    display: none;
+  }
+
+  .nav-pad {
+    height: 100%;
+    width: 90%;
+    margin: auto;
+  }
+
+  @media only screen and (min-width: 768px) {
+    .how {
+      display: inline;
+    }
+  }
 </style>
+<!-- must set data-turbolinks false for smooth scroll to work -->
+<nav class="readup-nav" role="navigation">
+  <div class="nav-pad">
 
-<nav class="navbar" role="navigation">
-  <div class="container">
-    <a href="/" id="navbar-title">
-      <div>
-        ReadUp
-      </div>
-    </a>
-    <ul class="navbar-right">
-      <li class="how"><a href="#end-no-reading">
+    <div class="logo-container">
+      <a href="/" class='logo'>
+          ReadUp
+      </a>
+    </div>
+
+    <div class="nav-buttons">
+
+      <a class="how" href="#end-no-reading" data-turbolinks="false">
         How it works
-      </a></li>
-<!--       <li class="navbar-button-item">
-        <a>
-          <button id="top-button" class="signup-button logger-in log-in-fake-button">
-            Log in
-          </button>
-        </a>
-      </li> -->
+      </a>
 
-      <li class="navbar-button-item">
-        <a href="#pitch">
-          <button
-            id="top-button"
-            onclick="mixpanel.track('navbar signup button clicked', {'location': 'navbar'});"
-            class="pure-button-primary pure-button signup-button"
-          >
-            Get started
-          </button>
-        </a>
-      </li>
-    </ul>
+
+      <a href="#pitch" data-turbolinks="false">
+        <button
+          id="top-button"
+          onclick="mixpanel.track('navbar signup button clicked', {'location': 'navbar'});"
+          class="pure-button-primary pure-button signup-button"
+        >
+          Get started
+        </button>
+      </a>
+    </div>
+
   </div>
-</nav>
 
-<nav class="navbar navbar-mobile" role="navigation">
-  <div class="container">
-    <a href="/" id="navbar-title">
-      <div>
-        ReadUp
-      </div>
-    </a>
-    <ul class="navbar-right">
 
-      <li class="navbar-button-item">
-        <a href="#pitch">
-          <!-- <button id="top-button" class="pure-button-primary pure-button signup-button" data-toggle="modal" data-target="#chooseRoleModal"> -->
-          <button
-            id="top-button"
-            class="signup-button
-            logger-in
-            log-in-fake-button"
-          >
-            Sign Up
-          </button>
-        </a>
-      </li>
 
-    </ul>
-  </div>
 </nav>
